force-app/main/default/objects/RenewalScanningResults__c/RenewalScanningResults__c.object-meta.xml
<CustomObject>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>Renewal Scanning Results</label>
    <nameField>
        <displayFormat>{000000000}</displayFormat>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Scanning Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>