force-app/main/default/objects/RenewalScanningResults__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>Comments</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>