force-app/main/default/objects/RenewalScanningResults__c/fields/License__c.field-meta.xml
<CustomField>
    <fullName>License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>License</label>
    <referenceTo>License__c</referenceTo>
    <relationshipLabel>Renewal Scanning Results</relationshipLabel>
    <relationshipName>Renewal_Scanning_Results</relationshipName>
    <type>Lookup</type>
</CustomField>