force-app/main/default/objects/RenewalScanningResults__c/fields/LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber__c</fullName>
    <description>PacPoint-MV102419 - Created for PVL phase 1</description>
    <label>License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>